--- a/testdata/link.html
+++ b/testdata/link.html
@@ -3,3 +3,4 @@
 <p><a href="href"></a></p>
 <p><a href="href">label</a></p>
 <p>text <a href="href">label</a> text</p>
+<p>text <a href="href">label</a> text <a href="href">label</a> text</p>
